tests/rosetta/out/Smalltalk/24-game-solve.out
/tmp/24-game-solve.st:57: parse error, expected ']'
